hphp/hack/test/typecheck/constraints/where_bad.php.exp
File "where_bad.php", line 12, characters 17-21:
A 'where' type constraint is violated here (Typing[4323])
File "where_bad.php", line 7, characters 19-23:
This is the method with 'where' type constraints
File "where_bad.php", line 10, characters 35-40:
Expected string
File "where_bad.php", line 7, characters 37-37:
  via this generic T
File "where_bad.php", line 7, characters 41-43:
But got int
File "where_bad.php", line 12, characters 17-21:
A 'where' type constraint is violated here (Typing[4323])
File "where_bad.php", line 7, characters 19-23:
This is the method with 'where' type constraints
File "where_bad.php", line 7, characters 41-43:
Expected int
File "where_bad.php", line 10, characters 35-40:
But got string
File "where_bad.php", line 7, characters 37-37:
  via this generic T
